--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 body{
     display: flex;
     justify-content: center;
-    background-image: url(./img/Fondobackground.png);
+    background-image: url(./img/fondo.png);
     right: 0;
     left: 0;
     margin: 0 auto;
@@ -25,19 +25,18 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-
     position: absolute;
     right: 0;
     left: 0;
     margin: 0 auto;
     top: 250px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgb(51, 51, 51);
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 20px;
     padding-bottom: 20px;
-    width: 600px;
-    height: 500px;
+    width: 480px;
+    height: 480px;
     border-radius: 20px;
 }
 
