--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,7 @@ body{
     top: 70px;
 }
 .submitGeneral{
-    right: 0;
-    left: 0;
+    right: 100px;
     margin: 0 auto;
     cursor: pointer;
     height: 50px;
@@ -72,17 +71,46 @@ body{
     background-color: rgba(82, 82, 82, 0.9);
 }
 
+.buttonRecuperarGeneral{
+    position: absolute;
+    top: 225px;
+    left: 100px;
+    height: 50px;
+    width: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    text-decoration: none;
+    background-color: rgb(51, 51, 51, 0.9);
+    border-radius: 10px;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    cursor: pointer;
+}
+.buttonRecuperarGeneral:hover{
+    transition: all .4s ease;
+    background-color: rgba(82, 82, 82, 0.9);
+
+}
+
+
 .input1, .input2{
     width: 300px;
     height: 30px;
     border-radius: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
 }
 .input1:placeholder-shown{
     text-align: center;
+    font-size: 12px;
     font-family: Naruto;
 }
 .input2:placeholder-shown{
     text-align: center;
+    font-size: 12px;
     font-family: Naruto;
 }
 .buttonVolver{
@@ -287,8 +315,12 @@ body{
 }
 .submitTecnica{
     top: 260px;
+    right: 130px;
 }
-
+.buttonRecuprarChakra{
+    top: 260px;
+    left: 130px;
+}
 .radiosChakra{
     position: relative;
     top: 215px;
@@ -329,4 +361,26 @@ body{
     margin: 0 auto;
     top: 470px;
     padding: 20px;
+}
+
+/*  */
+/*  */
+/*  */
+/*  */
+
+.cuadroAlerta{
+    display: none;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 400px;
+    background-color: rgba(135, 0, 0);
+    border-radius: 10px;
+    border: 5px solid rgb(91, 1, 1, 0.75);
+    width: 500px;
+    height: 300px;
+    z-index: 3;
+    text-align: center;
+    color: white;
+    font-size: 30px;
 }
