--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
     font-family: Naruto;
     src: url(./fonts/njnaruto.ttf);
 }
+@font-face {
+    font-family: Maven;
+    src: url(./fonts/MavenPro-VariableFont_wght.ttf);
+}
 
 body{
     display: flex;
@@ -77,7 +81,7 @@ body{
     left: 100px;
     height: 50px;
     width: 100px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Maven;
     font-size: 14px;
     text-decoration: none;
     background-color: rgb(51, 51, 51, 0.9);
@@ -98,7 +102,7 @@ body{
     width: 300px;
     height: 30px;
     border-radius: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Maven;
     text-align: center;
     font-weight: bold;
     font-size: 20px;
@@ -106,12 +110,12 @@ body{
 .input1:placeholder-shown{
     text-align: center;
     font-size: 12px;
-    font-family: Naruto;
+    font-family: Maven;
 }
 .input2:placeholder-shown{
     text-align: center;
     font-size: 12px;
-    font-family: Naruto;
+    font-family: Maven;
 }
 .buttonVolver{
     display: flex;
@@ -203,6 +207,30 @@ body{
     background-color: rgba(82, 82, 82, 0.9);
 }
 
+
+.buttonResistenciaTotal{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 90px;
+    width: 200px;
+    font-family: Bainsley;
+    font-size: 20px;
+    text-decoration: none;
+    color: white;
+    text-shadow: black -2px 0px, black 0px 2px, black 2px 0px, black 0px -2px;
+    background-color: rgb(51, 51, 51, 0.9);
+    padding: 30px;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+.buttonResistenciaTotal:hover{
+    transition: all .4s ease;
+    background-color: rgba(82, 82, 82, 0.9);
+}
 .cuadroInputs div{
     -webkit-user-select: none;
     cursor: pointer;
@@ -383,4 +411,34 @@ body{
     text-align: center;
     color: white;
     font-size: 30px;
+}
+
+
+/*  */
+/*  */
+/* ESTAS LINEAS DE ABAJO SON PARA LA RESISTENCIA DE CHAKRA. */
+/*  */
+
+.labelsInputResistenciaChakra{
+    position: relative;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.submitResistenciaChakra{
+    top: 265px;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+}
+
+.resultadoResistenciaChakra{
+    position: absolute;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    top: 340px;
+    padding: 20px;
+    font-size: 18px;
 }
