--- a/styles.css
+++ b/styles.css
@@ -36,32 +36,83 @@ body{
     height: 250px;
     width: 250px;
 }
-.cuadroInputs{
+
+.insideBoxIndex{
+    position: relative;
+    top: 220px;
+    -webkit-user-select: none;
+    cursor: pointer;
+
+    background-color: rgba(255, 249, 251, 0.8);
+    border-radius: 10px;
+    height: 584px;
+    width: 500px;
+}
+
+.pTextoDescripcionIndex{
+    padding: 20px;
+    font-family: Maven;
+    color: rgb(37, 38, 39);
+}
+
+.pTextoTituloIndex{
+    font-family: Maven;
+    color: rgb(37, 38, 39);
+}
+
+.boxHerramientaBack{
+    display: grid;
+    position: relative;
+    left: -12px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+.indexButtonHerramienta{
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    position: absolute;
-    right: 0;
-    left: 0;
-    margin: 0 auto;
-    top: 250px;
-    background-color: rgb(51, 51, 51, 0.9);
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    width: 480px;
-    height: 600px;
-    border-radius: 20px;
-    box-shadow: -7px 8px 34px 5px rgba(0,0,0,0.65);
-    -webkit-box-shadow: -7px 8px 34px 5px rgba(0,0,0,0.65);
-    -moz-box-shadow: -7px 8px 34px 5px rgba(0,0,0,0.65);
+
+
+    height: 160px;
+    width: 250px;
+    background-color: rgba(211, 212, 217,0.8);
+    border-radius: 10px;
+
+    text-decoration: none;
+    color: rgb(37, 38, 39);
+}
+    
+.buttonGolpes{
+    grid-area: 1 / 1 / 2 / 2;
+}
+.indexButtonHerramienta:hover{
+    transition: ease-in 200ms;
+    background-color: rgb(37, 38, 39);
+    color: rgb(255, 249, 251);
+}
+
+.buttonChakra{
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+.buttonResistenciaTotal{ 
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+.respaldarFichaButton{
+    grid-area: 2 / 1 / 3 / 2;
 }
 
 
 
 
-
+/*  */
+/*  */
+/*  */
+/* ! */
 /*  */
 /*  */
 /*  */
@@ -69,7 +120,21 @@ body{
 
 
 
-/* Esto manipula elementos generales de cualquier pantalla. Para manipular uno de manera más especifica, revisa la seccion relacionada */
+/* Control de Titulos, Descripciones y cosas que suelen aparecer en todas las paginas. */
+
+
+
+/* ? Este class controla todas las descripciones de las hojas de herramienta. Ten en cuenta que para cambiar su texto, debes referir a estos en cada una. */
+.descripcionGeneral{
+    font-family: Maven;
+    color: rgb(255, 249, 251);
+    font-size: 12px;
+    padding-top: 20px;
+}
+
+
+/* ? Estos Input controlan los dos input que se encuentran en cada hoja. Estos input cambian su utilidad basado en la hoja de Javascript. */
+
 .input1{
     position: relative;
     top: 50px;
@@ -78,6 +143,32 @@ body{
     position: relative;
     top: 70px;
 }
+
+.input1, .input2{
+    width: 300px;
+    height: 30px;
+    border-radius: 10px;
+    font-family: Maven;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+
+/* ? Trabaja conjunto al de arriba. Esto controla lo que diga en el interior del input. */
+.input1:placeholder-shown{
+    text-align: center;
+    font-size: 12px;
+    font-family: Maven;
+}
+.input2:placeholder-shown{
+    text-align: center;
+    font-size: 12px;
+    font-family: Maven;
+}
+
+
+/* ? Este controla el boton de calculo en cada hoja. */
 .submitGeneral{
     right: 100px;
     margin: 0 auto;
@@ -95,6 +186,9 @@ body{
     background-color: rgba(82, 82, 82, 0.9);
 }
 
+
+
+/* ? Este controla el boton de reusar los datos del localstorage del navegador. */
 .buttonRecuperarGeneral{
     position: absolute;
     top: 225px;
@@ -117,26 +211,7 @@ body{
 
 }
 
-
-.input1, .input2{
-    width: 300px;
-    height: 30px;
-    border-radius: 10px;
-    font-family: Maven;
-    text-align: center;
-    font-weight: bold;
-    font-size: 20px;
-}
-.input1:placeholder-shown{
-    text-align: center;
-    font-size: 12px;
-    font-family: Maven;
-}
-.input2:placeholder-shown{
-    text-align: center;
-    font-size: 12px;
-    font-family: Maven;
-}
+/* ? Este controla el boton de volver en cada hoja. */
 .buttonVolver{
     display: flex;
     align-items: center;
@@ -162,184 +237,36 @@ body{
     background-color: rgba(82, 82, 82, 0.9);
 }
 
-/*  */
 
-
-
-
-/*  */
-/*  */
-/*  */
-/* !PRIMERA PANTALLA - INDEX GENERAL */
-
-
-.tituloCalcular{
-    font-family: Naruto;
-    color: white;
-    text-shadow: black -2px 0px, black 0px 2px, black 2px 0px, black 0px -2px;
-    font-size: 15px;
-}
-
-.buttonGolpes{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    top: 50px;
-    width: 200px;
-    font-family: Bainsley;
-    font-size: 20px;
-    text-decoration: none;
-    color: white;
-    text-shadow: black -2px 0px, black 0px 2px, black 2px 0px, black 0px -2px;
-    background-color: rgb(51, 51, 51, 0.9);
-    padding: 30px;
-    border-radius: 10px;
-    border-style: solid;
-    border-color: black;
-    border-width: 1px;
-}
-.buttonGolpes:hover{
-    transition: all .4s ease;
-    background-color: rgba(82, 82, 82, 0.9);
-}
-
-.buttonChakra{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    top: 70px;
-    width: 200px;
-    font-family: Bainsley;
-    font-size: 20px;
-    text-decoration: none;
-    color: white;
-    text-shadow: black -2px 0px, black 0px 2px, black 2px 0px, black 0px -2px;
-    background-color: rgb(51, 51, 51, 0.9);
-    padding: 30px;
-    border-radius: 10px;
-    border-style: solid;
-    border-color: black;
-    border-width: 1px;
-}
-.buttonChakra:hover{
-    transition: all .4s ease;
-    background-color: rgba(82, 82, 82, 0.9);
-}
-
-
-.buttonResistenciaTotal{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    top: 90px;
-    width: 200px;
-    font-family: Bainsley;
-    font-size: 20px;
-    text-decoration: none;
-    color: white;
-    text-shadow: black -2px 0px, black 0px 2px, black 2px 0px, black 0px -2px;
-    background-color: rgb(51, 51, 51, 0.9);
-    padding: 30px;
-    border-radius: 10px;
-    border-style: solid;
-    border-color: black;
-    border-width: 1px;
-}
-.buttonResistenciaTotal:hover{
-    transition: all .4s ease;
-    background-color: rgba(82, 82, 82, 0.9);
-}
-
-.respaldarFichaButton{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    top: 110px;
-    width: 200px;
-    font-family: Bainsley;
-    font-size: 20px;
-    text-decoration: none;
-    color: white;
-    text-shadow: black -2px 0px, black 0px 2px, black 2px 0px, black 0px -2px;
-    background-color: rgb(51, 51, 51, 0.9);
-    padding: 30px;
-    border-radius: 10px;
-    border-style: solid;
-    border-color: black;
-    border-width: 1px;
-}
-.respaldarFichaButton:hover{
-    transition: all .4s ease;
-    background-color: rgba(82, 82, 82, 0.9);
-}
-
-
-.cuadroInputs div{
-    -webkit-user-select: none;
-    cursor: pointer;
-}
-
-
-
-/*  */
-/*  */
-/*  */
-
-.labelsInputFuerza{
-    position: relative;
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.labelsInputTecnica{
-    position: absolute;
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    right: 0;
-    left: 0;
-    margin: 0 auto;
-}
-
-.descripcionGeneral{
-    
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    font-size: 13px;
-    color: white;
-}
-
-.label1, .label2{
-    font-size: 20px;
-    font-family: Bainsley;
-    color: white;
-    text-shadow: black -2px 0px, black 0px 2px, black 2px 0px, black 0px -2px;
-}
 .resultadoGeneral{
     display: flex;
     align-items: center;
     justify-content: center;
     position: absolute;
-    top: 400px;
-    font-family: Arial, Helvetica, sans-serif;
+    top: 430px;
+    font-family: Maven;
     font-size: 20px;
     text-align: center;
-    color: white;
+    color: rgb(255, 249, 251);
 }
 
 
-/* PARA FUERZA */
+/*  */
+/*  */
+/*  */
+/* ! */
+/*  */
+/*  */
+/*  */
+
+
+
+
+/* ? ESTO AQUÍ ABAJO CONTROLA LOS ASSETS DE LA PAGINA DE FUERZA */
 
 .boxRadios{
-    position: absolute;
-    top: 280px;
+    position: relative;
+    top: 155px;
     border-radius: 10px;
     padding-left: 20px;
     padding-right: 10px;
@@ -347,16 +274,18 @@ body{
     width: 500px;
     height: 130px;
 }
-.boxRadios p{
-    position: absolute;
-    top: -10px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    font: 12px;
+
+
+.descripcionFuerzaBoxRadios{
+    color: rgb(255, 249, 251);
+    font-family: Maven;
+    font-size: 14px;
+    text-align: center;
 }
+
 .radiosFuerza{
-    position: absolute;
-    top: 350px;
+    position: relative;
+    top: 95px;
     z-index: 3;
 
 }
@@ -381,35 +310,61 @@ body{
 
 /*  */
 /*  */
-/* PARA CHAKRA */
+/*  */
+/* ! */
+/*  */
+/*  */
+/*  */
 
+
+/* ? ESTO AQUÍ ABAJO CONTROLA LOS ASSETS DE LA PAGINA DE CHAKRA */
+
+.labelsInputTecnica{
+    position: relative;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    
+}
 
 .descripcionTecnica{
     position: relative;
-    top: 50px;
     padding: 20px;
 }
+
 .submitTecnica{
-    top: 260px;
+    top: 245px;
     right: 130px;
 }
 .buttonRecuprarChakra{
-    top: 260px;
+    top: 245px;
     left: 130px;
 }
-.radiosChakra{
-    position: relative;
-    top: 215px;
-}
-
 .boxRadiosChakra{
     right: 0;
     left: 0;
     margin: 0 auto;
-    top: 315px;
+    top: 155px;
 }
+
+.radiosChakra{
+    position: relative;
+    top: 95px;
+}
+
+.descripcionChakraBoxRadios{
+    color: rgb(255, 249, 251);
+    font-family: Maven;
+    font-size: 13px;
+    text-align: center;
+}
+
 .buttonVolverTecnica{
-    top: 590px;
+    top: 550px;
 }
 
 .radiosChakra input{
@@ -435,7 +390,7 @@ body{
     right: 0;
     left: 0;
     margin: 0 auto;
-    top: 470px;
+    top: 430px;
     padding: 20px;
 }
 
@@ -653,4 +608,35 @@ body{
     top: -100px;
     width: 500px;
     height: 400px;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* ? AUN POR AVERIGUAR QUE COÑO ES */
+
+
+.labelsInputFuerza{
+    position: relative;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+
+.label1, .label2{
+    font-size: 20px;
+    font-family: Bainsley;
+    color: white;
+    text-shadow: black -2px 0px, black 0px 2px, black 2px 0px, black 0px -2px;
 }
