--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,20 @@
     font-family: Big;
     src: url(./fonts/big_noodle_titling.ttf);
 }
+@font-face {
+    font-family: Midorima;
+    src: url(./fonts/Midorima-PersonalUse-Regular.ttf);
+}
+
+@font-face {
+    font-family: Manga;
+    src: url(./fonts/mangat.ttf);
+}
+
+@font-face {
+    font-family: Komika;
+    src: url(./fonts/komika.hand.ttf);
+}
 
 body{
     display: flex;
@@ -454,139 +468,509 @@ body{
 /*  */
 /*  */
 
+.bodyFicha{
+    background-image: url(./img/academia_ninja_naruto_by_lwisf3rxd_d875sz8-fullview.jpg);
+    background-repeat:repeat-y;
+    background-size: cover;
+}
 
-/* ESTE CONTROLA EL FONDO DEL FORM */
-.fichaBackground{
-    padding: 20px;
-    background-color: rgba(125, 91, 166, 0.5);
-    border-radius: 10px;
-    width: 400px;
-    height: 1500px;
-    display: flex;
-    flex-direction: column;
+
+.inputInfoBackground{
     position: absolute;
+    top: 20px;
     left: 200px;
+    background-image: url(./img/hojapapel.jpg);
+    background-size:contain;
 
-}
-
-/* .inputImagenesGeneral{
-    display: none;
-} */
-
-.labelImagenesGeneral{
-    display: flex;
-    margin-top: 10px;
-
-    background-color: rgb(34, 27, 30);
     border-radius: 10px;
-    padding: 10px;
-    width: 150px;
-}
-
-
-/* ESTE CONTROLA EL FONDO DE LA FICHA */
-.fondoFichaTotal{
-    position: absolute;
-    left: 1000px;
-    background-color: rgba(33, 26, 29);
     height: 800px;
     width: 600px;
-    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    z-index: 3;
+}
+.tituloDatos{
+    font-family: Manga;
+    font-size: 25px;
 }
 
-.rellenoLetra{
-    position: relative;
-    left: 20px;
-    top: -200px;
-    display: flex;
-    margin-top: 15px;
-    padding-left: 5px;
-    background-color: rgba(99, 32, 238, 0.3);
+.inputInfoBackground label{
+    position: absolute;
+    top: 113px;
+    left: 72px;
+
+    font-family: Komika;
+    font-size: 20px;
+}
+
+
+.inputInfoBackground input{
+    position: absolute;
+
     height: 30px;
-    width: 330px;
 
+    border: none;
+    background-color: transparent;
 
+    font-family: Komika;
+    font-size: 20px;
     
 }
 
-.subtituloPCasillas{
+.innerValueJS{
+    font-family: Naruto;
+}
+
+#namePJ{
+    top: 107px;
+    left: 172px;
+}
+
+
+#agePJ{
+    top: 142px;
+    left: 172px;
+}
+#agePJLabel{
+    top: 142px;
+}
+
+
+#clanPJ{
+    top: 176px;
+    left: 172px;
+}
+#clanPJLabel{
+    top: 176px;
+}
+
+
+#elementoPJ{
     position: absolute;
-    font-family: Big;
-    font-size: 26px;
-    color: rgb(202, 213, 202);
+    height: 30px;
+    font-family: Komika;
+    background-color: transparent;
+    border: none;
 
-    left: 75px;
-    top: -25px;
+    top: 213px;
+    left: 260px;
+}
+#elementoPJLabel{
+    top: 213px;
 }
 
-.tituloPCasillas{
-    position: relative;
-    top: -12px;
-    font-family: Big;
+
+#aldeaNacimientoLabel{
+    top: 248px;
+}
+#aNacimientoPJ{
+    position: absolute;
+    top: 248px;
+    left: 250px;
+
+
+    height: 30px;
+    font-family: Komika;
+    background-color: transparent;
+    border: none;
+
+}
+
+
+.buttonExplicacion{
+    position: absolute;
+    top: 70px;
+
+    font-family: Komika;
+    font-size: 20px;
+    background-color: transparent;
+    cursor: pointer;
+
+}
+
+.buttonExplicacion:active{
+background-color:coral;
+}
+
+.explicacionPequeño{
+    left: 500px;
+    font-size: 10px;
+    cursor: pointer;
+}
+
+.explicacionPequeño:active{
+    background-color:coral;
+}
+.square1{
+    top: 113px;
+}
+.square2{
+    top: 148px;
+}
+.square3{
+    top: 183px;
+}
+.square4{
+    top: 219px;
+}
+.square5{
+    top: 255px;
+}
+
+
+
+#rangoPJ{
+    position: absolute;
+    top: 285px;
+    /* left: 250px; */
+
+
+    height: 30px;
+    font-family: Komika;
+    background-color: transparent;
+    border: none;
+
+}
+#rangoPJLabel{
+    top: 284px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+@keyframes desplazamientoDiv {
+    0% { left: 400px; }
+    100% { left: 820px; }
+}
+
+@keyframes desplazamientoDivRegreso {
+    0% { left: 820px; }
+    100% { left: 400px; }
+}
+
+.explicacionesDiv{
+
+    position: absolute;
+    top: 250px;
+    display: none;
+
+
+    background-image: url(./img/fondolibro.png);
+    border: #dbd0a7 10px solid;
+    border-radius: 10px;
+    height: 300px;
+    width: 300px;
+    z-index: 2;
+    flex-direction: column;
     align-items: center;
+}
+
+.submitFicha{
+    position: absolute;
+    top: 600px;
+
+    background-color: transparent;
+    cursor: pointer;
+
+    font-family: Komika;
+}
+
+.submitFicha:active{
+    background-color:coral;
+}
+
+.capturarFicha{
+    position: absolute;
+    top: 640px;
+
+    background-color: transparent;
+    cursor: pointer;
+
+    font-family: Komika;
+}
+
+.capturarFicha:active{
+    background-color:coral;
+}
+
+.inputEstadisticas label{
+    position: absolute;
+    top: 460px;
+    border: solid 1px black;
+
+    font-size: 14px;
+    text-align: center;
+
+    padding-bottom: 40px;
+    padding-top: 5px;
+    width: 100px;
+
+}
+
+#labelFuerzaChart{
+    left: 100px;
+}
+
+#labelVMovChart{
+    left: 205px;
     font-size: 12px;
-    color: rgb(248, 240, 251);
+    padding-bottom: 43px;
+}
+
+#labelVTecChart{
+    left: 310px;
+}
+#labelReflejoChart{
+    left: 415px;
+}
+
+.inputEstadisticas input{
+    position: absolute;
+    top: 495px;
+ 
+    width: 97px;
+    text-align: center;
+}
+#inputFuerzaChart{
+    left: 100px;
+}
+#inputVMovChart{
+    left: 205px;
+}
+#inputVTecChart{
+    left: 310px;
+}
+#inputReflejoChart{
+    left: 415px;
+}
+
+.descripcionBreve{
+    text-align: center;
+    position: absolute;
+    font-size: 10px;
+    top: 700px;
+}
+
+
+
+/* ! */
+/*? CONTROLA LOS INPUT DE IMAGEN */
+/* ! */
+
+.inputImagenesGeneral{
+    display: none;
+}
+.inputsImagenes label{
+    margin-left: 25px;
+    position: absolute;
+    top: 375px;
+
+    border: black 2px solid;
+    font-size: 15px;
+    text-align: center;
+    width: 100px;
+}
+.inputsImagenes label:active{
+    background-color:coral;
+}
+
+
+#imgFichaLabel1{
+    left: 178px;
+}
+#imgFichaLabel2{
+    left: 285px;
+}
+#imgFichaLabel3{
+    left: 392px;
 }
 
 
 
 
-.aldeaPNG{
+.closeButtonDiv{
+    background-color: transparent;
+    border: none;
+    height: 20px;
+
+    position: absolute;
+    right: 5px;
+}
+
+.closeButtonDiv:hover{
+    cursor: pointer;
+    background-color:rgba(255, 0, 0, 0.4);
+    border-radius: 2px;
+}
+
+
+.explicacionesDiv h3{
+    font-family: Komika;
+    font-size: 15px;
+    background-color: rgba(68, 204, 68, 0.648)
+}
+.explicacionesDiv p{
     position: relative;
-    background-size: cover;
-    top: 30px;
-    left: 20px;
-    /* background-color: white; */
-    width: 163px;
-    height: 104px;
+    top: -20px;
+
+    font-family: Komika;
+    font-size: 13px;
+    text-align: justify;
+    padding: 0px 15px;
 }
+
+
+
+
+/* ESTE CONTROLA EL FONDO DE LA FICHA */
+.book{
+    z-index: 3;
+    position: absolute;
+    top: -11px;
+    left: 980px;
+
+
+    background-image: url(./img/book.png);
+    background-size: cover;
+
+    width: 650px;
+    height: 820px;
+    background-repeat: no-repeat;
+    image-rendering: pixelated;
+}
+
+.fondoFichaTotal{
+    position: absolute;
+    left: 1000px;
+    background-image: url(./img/fondolibro.png);
+    height: 800px;
+    width: 600px;
+    border-radius: 10px;
+    z-index: 2;
+}
+
+.nombrePersonajeFicha{
+    z-index: 1;
+    background-size: cover;
+    border-radius: 10px;
+
+    height: 60px;
+    width: 600px;
+
+    position: absolute;
+    top: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.nombrePersonajeFicha p{
+    font-family: Midorima;
+    font-size: 50px;
+    background-color: rgba(209, 209, 224,0.5);
+    padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 10px;
+}
+
+
+.fondoDatosPrimarios{
+    position: absolute;
+    top: 125px;
+    left: 35px;
+    border-radius: 10px;
+
+    height: 275px;
+    width: 300px;
+    z-index: 1; 
+}
+.fondoDatosPrimarios p{
+    margin-top: 10px;
+    font-family: Midorima;
+    font-size: 20px;
+    background-color: rgba(209, 209, 224,0.5);
+
+    padding: 5px 15px;
+    border-radius: 5px;
+}
+#valueAldeaNac{
+    font-size: 16px;
+}
+
 .imgFicha{
     position: relative;
     top: 40px;
-    left: 370px;
-    background-size: 200px 250px;
+    left: 340px;
+    background-size: 230px 280px;
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
 
     border-radius: 10px;
-    /* background-color: white; */
-    width: 200px;
-    height: 250px;
+    background-color: white;
+    width: 230px;
+    height: 280px;
     z-index: 2;
+
+    background-size: cover;
+}
+
+
+.aldeaPNG{
+    z-index: 3;
+    position: relative;
+    background-size: cover;
+    top: 320px;
+    left: 340px;
+    /* background-color: rgb(243, 0, 0); */
+    width: 163px;
+    height: 84px;
 }
 
 
 .compañerosFichaFondo{
     display: flex;
     flex-direction: row;
-    
 
-    background-color: rgba(99, 32, 238, 0.3);
+    background-color: rgba(209, 209, 224);
     border-radius: 10px;
     width: 350px;
     height: 130px;
 
     position: relative;
-    top: -600px;
-    left: 20px;
+    top: -355px;
+    left: 35px;
     z-index: 1;
+    background-size: contain;
 }
+
+
 .compañerostitulo{
-    position: relative;
-    top: -570px;
-    left: 30px;
+    position: absolute;
+    top: 410px;
+    left: 50px;
     z-index: 2;
 
     font-size: 16px;
-    font-family: Big;
-    color: rgb(248, 240, 251);
+    font-family: Midorima;
+    color: black;
 }
+
+
 .equipoCompañerosficha{
     position: relative;
     top: 40px;
-    left: 50px;
+    left: 42px;
     margin-left: 15px;
 
     border-radius: 8px;
@@ -594,18 +978,21 @@ body{
     height: 80px;
     width: 80px;
 
-    /* background-color: white; */
+    background-color: white;
     background-size: 80px 80px;
     background-repeat: no-repeat;
 }
-
+#equipoCompañero1{
+    left: 20px;
+    border: rgb(187, 10, 33) 3px solid;
+}
 
 
 
 #chartRadar{
     position: relative;
     left: -80px;
-    top: -100px;
+    top: 100px;
     width: 500px;
     height: 400px;
 }
